# android---ecg-c-analysis-module

./: .gitignore  Jun-27 20-44 ecg.csv  README.md  calmdel.bat  gradle.properties  result.bat  sleepdel.bat  sleepresult.bat
ReportSleep/: myData.txt
analysis/: CMakeLists.txt  build.gradle
analysis/src/androidTest/java/com/tool/sports/com/analysis/: ExampleInstrumentedTest.java
analysis/src/main/: AndroidManifest.xml
analysis/src/main/cpp/: _global.cpp  common.h  ecgsqa_algos.cpp  ecgsqa_algos.h  ecgsqa_utils.h  ecgsqa_utils2.h  native-lib.cpp  test_ex_ecg_adddata.cpp  test_ex_ecg_sequential.cpp  thread_ALG.h  thread_CALMNESS.h  thread_CLIENT.h  thread_DATASRC.h  thread_DATA_ADD_ONE.h  wfdb_export.cpp  wfdb_export_0.txt
analysis/src/main/cpp/3p_bmdx/src_code/: arch_notes.txt  bmdx_config.h  bmdx_cpiomt.h  bmdx_main.cpp  bmdx_main.h  vecm_hashx.h  yk_cx.h
analysis/src/main/cpp/3p_bmdx/src_code_tests/: _test_bmdx_cpiomt.h  _test_bmdx_unity.h  _test_yk_c_common.h  _test_yk_c_vecm_hashx.h  _test_yk_cx.h
analysis/src/main/cpp/3p_bmdx/src_code_tests/common/: yk_tests_base.h
analysis/src/main/cpp/3p_wfdb/: annot.c  wfdb.h  wfdbio.c  wfdblib.h
analysis/src/main/cpp/math_utils/: median.h  polynome3.h
analysis/src/main/cpp/matrix/: MyArr.cpp  MyArr.h  TFftAlgorithm.cpp  TFftAlgorithm.h
analysis/src/main/java/com/tool/sports/com/analysis/: AnalysisListener.java  CalmAnalysisListener.java  PAnanlysisInterface.java  ProcessAnalysis.java  SleepAnalysisStatusListener.java  SleepEcgSave.java  Static1.java  StaticGlobalVar.java  TestData.java  TestDataECG.java  TestDataRRI.java  TestDataRRI2.java  TestTest.java
analysis/src/main/java/com/tool/sports/com/analysis/ECGLib/: PipeLine.java  Proprocess.java  RotationQueue.java  TypeClassification.java  WaveChars.java  WaveDetect.java
analysis/src/main/java/com/tool/sports/com/analysis/testdata/: TestDataECG.java  TestDataRRI.java  TestDataRRI2.java
analysis/src/main/res/layout/: main_layout.xml
analysis/src/test/java/com/tool/sports/com/analysis/: ExampleUnitTest.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
sleepdata/: t_slp01a_result.csv
(+5 files in other folders)
